k8s/wshoto/tekton/install/dashboard-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dashboard-gateway
  namespace: tekton-pipelines
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: tekton-pipelines
spec:
  hosts:
    - "tekton.local.com"
  gateways:
    - dashboard-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tekton-dashboard
            port:
              number: 9097
